# newprogram

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  README.md  am.mak  config.h.in  configure.ac  dirs.c  dirs.h  files.c  files.h  firstrun.c  firstrun.h  gopt.c  gopt.h  goptC  goptH  mainC  manpage.md  newprogram.1  newprogram.c  newprogram.md  paths.cfg  prdata.cfg  str.c  str.h
